<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_background"
    android:padding="16dp"
    android:layout_margin="8dp">

        <!-- Job title -->
        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancy"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Company and location -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/jsc_otp_bank"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <!-- Location -->
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <!-- Experience and other details -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_3_6"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Date published -->
        <TextView
            android:id="@+id/datePublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/date"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <!-- Button to apply -->
        <Button
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/otklik"
            android:textColor="@android:color/white" />

</LinearLayout>
