<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/black">

    <!-- Search bar -->
    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/search_background"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:hint="@string/search_for_suitable_jobs"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Job title -->
        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancy"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Company and location -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/jsc_otp_bank"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <!-- Location -->
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <!-- Experience and other details -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_3_6"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Date published -->
        <TextView
            android:id="@+id/datePublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/date"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <!-- Button to apply -->
        <Button
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/otklik"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- RecyclerView for job list -->
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:padding="8dp"-->
<!--        android:clipToPadding="false" />-->

    <!--    second job item-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_background"
        android:padding="16dp"
        android:layout_margin="8dp">

        <!-- Job title -->
        <TextView
            android:id="@+id/jobTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancy"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp" />

        <!-- Company and location -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/companyName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsc_otp_bank"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <!-- Location -->
        <TextView
            android:id="@+id/location1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <!-- Experience and other details -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            tools:ignore="UseCompoundDrawables"
            >

            <!--        <ImageView-->
            <!--            android:id="@+id/experienceIcon"-->
            <!--            android:layout_width="20dp"-->
            <!--            android:layout_height="20dp"-->
            <!--            android:contentDescription="@string/todo"-->
            <!--            android:src="@drawable/ic_experience" />-->

            <TextView
                android:id="@+id/experience1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_6"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <!-- Date published -->
        <TextView
            android:id="@+id/podrabotka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="Подработка"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/datePublished1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />

        <!-- Button to apply -->
        <Button
            android:id="@+id/applyButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otklik"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

<!--    third job -->



    <!-- Bottom navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>
